--- a/about/index.html
+++ b/about/index.html
@@ -10,10 +10,9 @@
 <meta property='og:description' content=''>
 <meta property='og:url' content='/about/'>
 <meta property='og:site_name' content='北山工坊'>
-<meta property='og:type' content='article'><meta property='article:section' content='' /><meta property='og:image' content='/' />
+<meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="关于我">
-<meta name="twitter:description" content=""><meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content='/' />
+<meta name="twitter:description" content="">
     <link rel="shortcut icon" href="/img/favicon.ico" />
 
     </head>
