--- a/search/index.html
+++ b/search/index.html
@@ -10,10 +10,9 @@
 <meta property='og:description' content=''>
 <meta property='og:url' content='/search/'>
 <meta property='og:site_name' content='北山工坊'>
-<meta property='og:type' content='article'><meta property='article:section' content='' /><meta property='og:image' content='/' />
+<meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content='/' /><link rel="alternate" type="application/json" href="/search/index.json">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="/search/index.json">
     <link rel="shortcut icon" href="/img/favicon.ico" />
 <link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
