deploy: LinsMik/kita-blog@e9672dff2fc9f6dfb3591085d9ddfb807900dc19

--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,11 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''>
 <title>关于我</title>
 
-<link rel='canonical' href='https://linsmik.github.io/about/'>
+<link rel='canonical' href='https://kitasuna.ml/about/'>
 
 <link rel="stylesheet" href="/scss/style.min.8191399262444ab68b72a18c97392f5349be20a1615d77445be51e974c144cff.css"><meta property='og:title' content='关于我'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://linsmik.github.io/about/'>
+<meta property='og:url' content='https://kitasuna.ml/about/'>
 <meta property='og:site_name' content='北山工坊'>
 <meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="关于我">
