--- a/search/index.html
+++ b/search/index.html
@@ -4,17 +4,17 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''>
 <title>搜索</title>
 
-<link rel='canonical' href='https://linsmik.github.io/search/'>
+<link rel='canonical' href='https://kitasuna.ml/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.8191399262444ab68b72a18c97392f5349be20a1615d77445be51e974c144cff.css"><meta property='og:title' content='搜索'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://linsmik.github.io/search/'>
+<meta property='og:url' content='https://kitasuna.ml/search/'>
 <meta property='og:site_name' content='北山工坊'>
 <meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="搜索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://linsmik.github.io/search/index.json">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://kitasuna.ml/search/index.json">
     <link rel="shortcut icon" href="/img/favicon.ico" />
-<link rel="preload" href="https://linsmik.github.io/search/index.json" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="https://kitasuna.ml/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -222,7 +222,7 @@
 </aside>
 
             <main class="main full-width">
-<form action="https://linsmik.github.io/search/" class="search-form"data-json="https://linsmik.github.io/search/index.json">
+<form action="https://kitasuna.ml/search/" class="search-form"data-json="https://kitasuna.ml/search/index.json">
     <p>
         <label>搜索</label>
         <input name="keyword" placeholder="输入关键词..." />
